--- a/haruna/templates/index.html
+++ b/haruna/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Haruna is a picture sharing station</h1>
-<h2>Next refresh time: {{ refresh_time }} seconds</h2>
+<h2>Next refresh time: {{ refresh_time }} minutues</h2>
 {% for share in shares %}
     <div class="form-group">
         <image width="800" src="{% static share %}"/>
